# CrimsonQuill

./: .gitignore  CMakeLists.txt  README.md
include/: cursor.h  define.h  editor.h  error.h  terminalMode.h
src/: cursor.c  define.h  editor.c  editorProcessing.h  error.c  error.h  main.c  main.cpp  rawmode.h  terminalMode.c
